--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
 </style>
 
 <div class="navbar">
-  <a href="/">Inicio</a>
-  <a href="/about">Sobre mí</a>
-  <a href="/posts">Posts</a>
+  <a href="/MiBlog">Inicio</a>
+  <a href="MiBlog/about">Sobre mí</a>
+  <a href="MiBlog/posts">Posts</a>|
 </div>
